Used unorded list to add recipe ingredients into eggs cassarole page.

--- a/recipes/Eggs-Benedict-Casserole.html
+++ b/recipes/Eggs-Benedict-Casserole.html
@@ -9,5 +9,23 @@
 <body>
     <h1>Eggs-Benedict-Casserole</h1>
     <img src="../Images/eggs.jpeg" alt="Eggs-Benedict-Casserole">
+    <p>Overnight Eggs Benedict! Easy to make ahead, perfect for brunch or a special occasion or overnight house guests.
+    </p>
+    <h2>Ingreddients</h2>
+    <ul>
+        <li>cooking spray</li>
+        <li>8 Large eggs</li>
+        <li>2 cups of milk</li>
+        <li>3 green onions,chopped</li>
+        <li>1 teaspoon onion powder</li>
+        <li>1 teaspoon salt</li>
+        <li>3/4 poind Canadian bacon,cut into 1/2-inch dice</li>
+        <li>6 English muffins,cut into 1/2-inch dice</li>
+        <li>1/2 teaspoon paprika</li>
+        <li>1(.9 ounce) package hollandaise sauce mix</li>
+        <li> 1 cup milk</li>
+        <li> 1/4 cup margarine</li>
+
+    </ul>
 </body>
 </html>
