added recipe steps using ordered list tag

--- a/recipes/Eggs-Benedict-Casserole.html
+++ b/recipes/Eggs-Benedict-Casserole.html
@@ -27,5 +27,15 @@
         <li> 1/4 cup margarine</li>
 
     </ul>
+    <h2>Cooking Steps</h2>
+    <ol>
+        <li>Sprat 9x13-inch baking dish with cooking spray.</li>
+        <li>Whisk eggs, 2 cups milk, green onions, onion powder, and salt together in a large bowl until well mixed.</li>
+        <li>Layer half the Canadian bacon in the preparded baking dish, Spread Englush muffins over meat and top with remaining Canadian bacon. pour egg mixture over casserole. Cover baking dish with Plastic wrap and refrigerate overnight.</li>
+        <li>Preheat the over to 375 degrees F (190 degreees C).</li>
+        <li> Sprinkle casserole with paprika; cover with aluminum foil.</li>
+        Bake in preheated over until eggs are nearly set,about 30 minutes; remove foil. Continue baking until eggs are completely setmabout 15 more minutes.
+        <li>Whisk hollandaise sauce mix with 1 cup milk in a saucepan. Add margarine and bring to a boil, stirring frequently. Reduce heat to medium-low, simmer, and stir until thickened, about 1 minute. Drizzle sauce over casserole to serve.</li>
+    </ol>
 </body>
 </html>
