created fudgy brownies link and set up page-by adding header and images,which is saved in images folder

--- a/recipes/Fudgy-Brownies.html
+++ b/recipes/Fudgy-Brownies.html
@@ -7,9 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <ul>
-    <li><a href="../odin-recipes/recipes/Eggs-Benedict-Casserole.html">Eggs-Benedict-Casserole</a></li>
-    </ul>
+    <h1>Fudgy Brownies</h1>
+    <img src="../Images/Brownies-Recipe-2-1200-1024x683.jpg">
+    
+    
 </body>
 </html>
