created ingredients list using unorded list

--- a/recipes/Fudgy-Brownies.html
+++ b/recipes/Fudgy-Brownies.html
@@ -9,7 +9,20 @@
 <body>
     <h1>Fudgy Brownies</h1>
     <img src="../Images/Brownies-Recipe-2-1200-1024x683.jpg">
-    
-    
+    <h2>Ingreddients</h2>
+    <ul>
+        <li>10 tablespoons (145 grams) unsalted butter</li>
+        <li>1 ¼ cups (250 grams) granulated sugar /li>
+        <li>3/4 cup plus 2 tablespoons (80 grams) unsweetened cocoa powder, natural or Dutch-process </li>
+        <li> 1/4 rounded teaspoon kosher salt, use slightly less if using fine sea or table salt</li>
+        <li> 1 teaspoon vanilla extract</li>
+        <li> 2 large cold eggs</li>
+        <li> 1/2 cup (65 grams) all purpose flour</li>
+        <li> 2/3 cup (75 grams) chopped walnuts or pecans, optional</li>
+    </ul>
+    <h2>Baking steps</h2>
+    <ol>
+        <li></li>
+    </ol>
 </body>
 </html>
