--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <h1>Odin Recipes</h1>
     <ul>
     <li><a href="../odin-recipes/recipes/Eggs-Benedict-Casserole.html">Eggs-Benedict-Casserole</a></li>
+    <li><a href="./recipes/Fudgy-Brownies.html">Fudgy-Brownies</a></li>
     </ul>
 </body>
 </html>
